<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slouple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/signUpUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/signUpEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/emailAddress"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="254"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:orientation="vertical">

                <com.slouple.android.widget.button.SubmitButton
                    android:id="@+id/signUpSubmitButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    slouple:primaryText="@string/signUp"
                    slouple:textSize="25"
                    slouple:primaryColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>