...
                    slouple:textSize="25"
                    tools:background="@color/colorPrimary"
                    tools:layout_height="50dp"
                    slouple:primaryColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/createAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:clickable="false"
                    android:padding="10dp"
...
