<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorContentBackground"
    android:orientation="vertical">

    <ca.ualberta.angrybidding.ui.view.TaskPopupMenuButton
        android:id="@+id/taskPopupMenuButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_action_more_horiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            tools:text="Job Request" />

        <TextView
            android:id="@+id/taskOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorUsername"
            tools:text="bob b." />

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget est at ipsum tristique imperdiet. Ut sit amet elit non." />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#22111111"
        android:layout_gravity="bottom"/>

</FrameLayout>