...
    <string name="addTask">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="taskPosted">Task Posted</string>
    <string name="taskProvided">Task Provided</string>
    <string name="viewDetails">View Details</string>
    <string name="editTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="bidTask">Bid</string>
    <string name="bids">Bids</string>
    <string name="bid">Bid</string>
    <string name="price">Price</string>
    <string name="submitBid">Submit Bid</string>
...
